Layout tweaks + translation fixes (#181)
Co-authored-by: github-actions <github-actions@github.com>

--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-03-24 10:20+0100\n"
+"POT-Creation-Date: 2025-03-25 14:49+0100\n"
 "PO-Revision-Date: 2024-11-01 11:30+0000\n"
 "Last-Translator: qwrtln <qwrtln@users.noreply.hosted.weblate.org>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -24,7 +24,7 @@ msgstr ""
 #: coops/stand_united.tex:5 clash/bloody_grail.tex:5 clash/force_of_will.tex:5
 #: clash/the_hunt.tex:5 clash/dragoncurse_castle.tex:5
 #: campaigns/inferno_devilish_plan.tex:6
-#: campaigns/inferno_devilish_plan.tex:224
+#: campaigns/inferno_devilish_plan.tex:202
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5
 #: campaigns/castle_greek_gift.tex:6 campaigns/castle_greek_gift.tex:85
@@ -33,7 +33,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/what_to_play.tex:5
-#: sections/recommendations.tex:73 sections/recommendations.tex:128
+#: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/credits.tex:10
 #, no-wrap
 msgid ""
@@ -98,7 +98,7 @@ msgstr ""
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:44
 #: coops/emerald_island.tex:38 coops/close_to_enemies.tex:37
 #: coops/stand_united.tex:33 clash/the_hunt.tex:37
-#: campaigns/inferno_devilish_plan.tex:103
+#: campaigns/inferno_devilish_plan.tex:88
 #: campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
 #, no-wrap
@@ -112,7 +112,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
 #: coops/emerald_island.tex:47 coops/close_to_enemies.tex:70
-#: coops/stand_united.tex:52 campaigns/inferno_devilish_plan.tex:136
+#: coops/stand_united.tex:52 campaigns/inferno_devilish_plan.tex:121
 #: campaigns/inferno_steadwicks_fall.tex:133
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
@@ -128,7 +128,7 @@ msgstr ""
 #. type: multicols
 #: coops/sentinels.tex:56 coops/titans_stronghold.tex:63
 #: coops/emerald_island.tex:51 coops/close_to_enemies.tex:76
-#: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:140
+#: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
 #: campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
 #, no-wrap
@@ -143,7 +143,7 @@ msgstr ""
 #: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
 #: coops/emerald_island.tex:55 clash/bloody_grail.tex:64
 #: clash/force_of_will.tex:62 clash/the_hunt.tex:65
-#: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:155
+#: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:140
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
@@ -160,7 +160,7 @@ msgstr ""
 #: coops/sentinels.tex:145 coops/titans_stronghold.tex:110
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:121 clash/bloody_grail.tex:127
-#: campaigns/inferno_devilish_plan.tex:226 sections/credits.tex:28
+#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:28
 #: sections/credits.tex:32
 #, no-wrap
 msgid ""
@@ -363,13 +363,22 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:69
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{center}\n"
+#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
+#| "\\end{center}\n"
+#| "\n"
 msgid ""
 "\\begin{tikzpicture}[overlay]\n"
-"  \\node[inner sep=0pt, opacity=0.3] at (0, -6.2) {\\includegraphics[width=0.75\\linewidth, keepaspectratio]{\\art/shackles_of_war.png}};\n"
+"  \\node[inner sep=0pt, opacity=0.2] at (0, -6.2) {\\includegraphics[width=0.75\\linewidth, keepaspectratio]{\\art/shackles_of_war.png}};\n"
 "\\end{tikzpicture}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
+"\\end{center}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:76
@@ -529,7 +538,7 @@ msgstr ""
 #| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
 #| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
 #| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-#| "\\darkcell[1.7]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
+#| "\\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
 #| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
 #| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
 #| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
@@ -571,7 +580,7 @@ msgid ""
 "4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
 "4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} "
 "& \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
-"Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]"
+"Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.8]"
 "{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure "
 "\\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & "
 "\\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak "
@@ -613,7 +622,7 @@ msgstr ""
 "& \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
 "Puis\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
 "{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak "
-"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 joueurs} & "
+"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 joueurs} & "
 "\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
 "Puis\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
 "{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak "
@@ -632,32 +641,42 @@ msgstr ""
 "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 
+#. type: tikzpicture
+#: coops/titans_stronghold.tex:203
+#, no-wrap
+msgid ""
+"[remember picture, overlay]\n"
+"  \\node(bg)[anchor=center, opacity=0.15] at (current page.center) {\n"
+"    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
+"  };"
+msgstr ""
+
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 1 JOUEUR}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 2 JOUEURS}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 3 JOUEURS}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 4 JOUEURS}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{5-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 5 JOUEURS}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:233
+#: coops/titans_stronghold.tex:240
 msgid "\\captionof{figure}{\\textbf{6-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 6 JOUEURS}}"
